--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,3 +13,9 @@
    </ul> 
 </div> 
 <div ngNonBindable>// pause at https://www.tutorialspoint.com/angular2/angular2_crud_operations_using_http.htm</div>
+
+  <ul>
+      <li><a [routerLink] = "['/Product']">Product</a></li>
+      <li><a [routerLink] = "['/Inventory']">Inventory</a></li>
+   </ul>
+   <router-outlet></router-outlet>
